<resources>
    <string name="app_name">Crunch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crunch_central">Crunch Central</string>
    <string name="cues">The Cues</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="challenge">Challenge</string>
    <string name="bad_habit">What triggers you to %1$s?</string>
    <string name="motivation_title">Eat celery!</string>
    <string name="finish_button">Finish!</string>
    <string name="title_activity_each_habit_page">EachHabitPage</string>
    <string name="calendar_view_title">Calendar:</string>
    <string name="dialog_did_you_do">Did you do the good habit?</string>
    <string name="yes_dialog">Yes!</string>
    <string name="no_dialog">No!</string>
    <string name="title_activity_cues_display_page">CuesDisplayPage</string>
    <string name="title_activity_challenge_page">ChallengePage</string>
    <string name="habit_setup_title">I want to crunch my habit of:</string>
    <string name="habit_setup_hint">e.g. eating chocolate chip cookies</string>
    <string name="next_button">Next</string>
    <string name="lens_intro">Let\'s examine ourselves under a lens!</string>
    <string name="bad_habit_location">Where do you do your bad habit?</string>
    <string name="bad_habit_location_hint">e.g. on my bed at home</string>
    <string name="bad_habit_time">When do you do your bad habit?</string>
    <string name="bad_habit_time_hint">e.g. 6pm after I get home from work</string>
    <string name="research_bad_habit_location_time">Research shows that identifying when and where you do your habit
        is important. </string>
    <string name="bad_habit_person">Who are you usually with when conducting this habit?</string>
    <string name="research_bad_habit_person">research quote goes here</string>
    <string name="bad_habit_emotion">What mental/physical/emotional state are you in?</string>
    <string name="research_bad_habit_emotion">research quote goes here</string>
    <string name="bad_habit_action">What physical action precedes your bad habit?</string>
    <string name="research_bad_habit_action">research quote</string>
    <string name="bad_habit_category">What category would you tag this habit with?</string>
    <string name="research_bad_habit_category">research quote goes here</string>
    <string name="bad_habit_category_hint">e.g #Exercise</string>
    <string name="bad_habit_action_hint">e.g going to vending machine</string>
    <string name="bad_habit_emotion_hint">e.g stressed</string>
    <string name="bad_habit_person_hint">e.g my friend</string>
    <string name="obstacle_intro">Let\'s predict what obstacles we may face, to ensure that our habit is solid.</string>
    <string name="obstacle_finishing_thought">Self-motivation is essential.</string>
    <string name="obstacle_question1">Obstacles that I may face include:</string>
    <string name="obstacle_question1_hint">e.g. not having enough in the fridge.</string>
    <string name="research_obstacle1">research quote goes here</string>
    <string name="obstacle_question2">What do you want to tell yourself when you want to give up on this habit?</string>
    <string name="research_obstacle2">research quote goes here</string>
    <string name="obstacle_question2_hint">e.g. You can do it, you know you want to fit before next school year.</string>
    <string name="reward_intro">Let\'s identify the reward for this routine, so you\'ll keep
        wanting to practice this habit :-).
    </string>
    <string name="reward_question">My reward is</string>
    <string name="reward_hint">e.g. being more energetic from eating the right foods.</string>
    <string name="research_reward">research quote goes here</string>
    <string name="habit_routine">I will switch out my bad habit for a new routine. I want to</string>
    <string name="habit_routine_hint">e.g. eat fresh slices of pineapple in the afternoon</string>
    <string name="research_habit_routine">research quote goes here</string>
    <string name="habit_intro">Let\'s work out the details of your new habit to make it feasible.</string>
    <string name="habit_change">Do you need a change in scenery? Where would be a better place to go?</string>
    <string name="habit_change_hint">e.g. Instead of sleeping on my sofa, I will stay in the garden outside.</string>
    <string name="research_habit_change">research quote goes here</string>
    <string name="habit_fix_emotion">How do I fix my emotional state?</string>
    <string name="habit_fix_emotion_hint">e.g. Instead of feeling lonely after work, I will
            satisfy my craving for belonging my calling my grandmother.</string>
    <string name="research_habit_emotion">research quote goes here</string>
    <string name="habit_action">What productive action could lead into your new habit?</string>
    <string name="habit_action_hint">e.g. I will take a walk outside before I head home.</string>
    <string name="research_habit_action">research quote goes here</string>
    <string name="habit_time">What time do you want to set a reminder for your new goal</string>
    <string name="habit_time_hint">e.g. 3PM would work great.</string>
    <string name="research_habit_time">research quote goes here</string>
    <string name="habit_title_label">Crunch Name: </string>
    <string name="habit_details_label">Details</string>
    <string name="habit_completed_label">Completed!</string>
    <string name="date_picker_title">Challenge Start Date:</string>
    <string name="new_habit">New Habit</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s habits</string>
    <string name="habit_friend_text">Choose a Friend to Challenge!</string>
    <string name="habit_report_text">Share</string>
    <string name="habit_report">%1$s!
        This habit was created on %2$s. %3$s, and %4$s
    </string>
    <string name="habit_report_completed">Congrats on completing this habit challenge!</string>
    <string name="habit_report_uncompleted">The habit challenge is not yet solved.</string>
    <string name="friend_report_no_friend">there is no friend who is challenged yet.</string>
    <string name="friend_report_friend">the friend you have selected to challenge is %s.</string>
    <string name="habit_report_subject">Crunch Habit Report</string>
    <string name="send_report">Send Habit report via</string>
    <string name="hello">Hello!</string>
    <string name="set_time_for_new_habit">Set time for new habit!</string>
    <string name="calendar_view_button">See calendar</string>
    <string name="Finish">Finish!</string>
    <string name="drawer_text">Drawer Text</string>
    <string name="ns_menu_open">Menu Open</string>
    <string name="ns_menu_close">Menu Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="ns_menu_main_header">Main Header</string>
    <string name="ns_menu_main_header2">Main Header</string>
    <string name="action_save">Action Save</string>
    <string name="steps">Steps to Success</string>
    <string name="crunch_home">Crunch HomePage</string>
    <string-array name="navigation_drawer_items_array">
        <item>See Calendar</item>
        <item>Choose Friend to Challenge</item>
        <item>Cues</item>
        <item>Random1</item>
        <item>Random2</item>
    </string-array>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitutde used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No Geocoder available</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Crunch your habits away!</string>
    <string name="toggle">Toggle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="title_activity_maps">Map</string>
<string name="title_section1">My First Section</string>
<string name="title_section2">My Second Section</string>
<string name="title_section3">My Third Section</string>
<string name="title_section4">My Fourth Section</string>
<string name="title_section5">My Fifth Section</string>
    <string name="createHabit">Create Habit</string>
    <string name="make_New_Habit">Make New Habit</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Prev</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="menu_settings">Settings</string>
    <string name="crunch_quote1">Pursue Greatness!</string>
    <string name="crunch_quote2">Set your goals for the Stars!</string>
    <string name="crunch_quote3">Self improvement is the best improvement!</string>
    <string name="crunch_quote4">Better yourself!</string>
    <string name="crunch_quote5">Stop waiting to be great!</string>
    <string name="crunch_quote6">Success is 110% effort!</string>
    <string name="crunch_quote7">The early bird gets the worm!</string>
    <string name="crunch_quote8">Its never too late to change a bad habit!</string>
    <string name="crunch_quote9">Always seek betterment!</string>
    <string name="crunch_quote10">Take interest in your future!</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="facebook_app_id">907454049325461</string>
    <string name="parse_app_id">BnTP6MXyhpdhba9pMDw7KD9lrpraSlczO1LGI9nG</string>
    <string name="parse_client_key">GpitdT0RlxyDFBzXxNwIFZGusjJyoCSrp6GH1JAD</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="action_search">Search</string>
</resources>