<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <include layout="@layout/view_camera_and_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_details_label"
        style="?android:listSeparatorTextViewStyle" />

    <Button
        android:id="@+id/habit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <CheckBox
        android:id="@+id/habit_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/habit_completed_label" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/habit_friend_text"
        android:id="@+id/challenge_button"
        android:onClick="CalendarPage"/>

    <Button
        android:id="@+id/habit_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/habit_report_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_view_button"
        android:id="@+id/calendar_button"
        android:onClick="CalendarPage" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:layout_width="312dp"
        android:layout_height="wrap_content" />


</LinearLayout>