<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Holo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:background="@color/semi_white"
    tools:context=".WelcomeActivity"
    android:orientation="vertical" android:theme="@android:style/Theme.NoTitleBar">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ScrollView>


    <Button
        android:id="@+id/signup_button"
        android:background="@color/orange"
        android:paddingTop="10dp"
        android:layout_alignBottom="@+id/textview_1"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/signup" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_with_facebook"
        android:layout_below="@+id/trial"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"/>

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/textview_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_color"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="Log in"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"/>

    <LinearLayout
        style="@style/LoginFormContainer"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:imeActionId="@+id/edittext_action_login"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionUnspecified" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not a member?"
        android:textColor="@color/background_color"
        android:textSize="18dp"
        android:id="@+id/textView6"
        android:layout_above="@+id/signup_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/orange"
        android:text="@string/login"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignLeft="@+id/signup_button"
        android:layout_alignStart="@+id/signup_button"/>

    <Button
        android:id="@+id/trial"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/orange"
        android:text="Testing"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"/>

</RelativeLayout>